--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wikinator",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A discord bot with multiple wiki browsing support.",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,12 @@
   "author": "Ramanel",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "discord.js": "^12.2.0",
-    "html-entities": "^1.3.1",
-    "pg": "^8.1.0"
+    "@discordjs/builders": "^0.11.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "axios": "^0.24.0",
+    "discord-api-types": "^0.26.1",
+    "discord.js": "^13.5.0",
+    "html-entities": "^1.2.1",
+    "pg": "^8.7.1"
   }
 }
